# Streamlit_jobexp

./: pyproject.toml  report.md  requirements.txt
.devcontainer/: devcontainer.json
Desktop/First Semester/Projects/PromoterPortal/Contactform/: ContactForm.html  ContactUpdate.js  style.css
Desktop/First Semester/Projects/PromoterPortal/DeveloperPortal/: crypto.js  firebase.js  index.html  script.js  styles.css
output/: optimized_experience.txt
src/jobexp/: crew.py  main.py  resume_agents.py  resume_tasks.py  streamlit_app.py
src/jobexp/config/: agents.yaml  tasks.yaml
